[package]
name = "pbkdf2"
version = "0.1.0"
authors = ["Adrian White <snarkyboojum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
hmac_sha = { git = "https://github.com/snarkyboojum/hmac_sha.git" }

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "pdkdf_hmac_sha12_benchmark"
harness = false